# disease-detection-fastapi

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: app.py
docs/: README.md  mkdocs.yml
docs/docs/: index.md
tests/: test_app.py
