[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "twelve_factor_app"
version = "0.0.1"
description = "This is the first assignment"
authors = [
  { name = "Fusemachine" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["twelve_factor_app"]
include = ["pyproject.toml", "twelve_factor_app/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["twelve_factor_app"]
force-sort-within-sections = true

